# automatic_exploit_generation

./: .gitignore  .gitmodules  README.md  pyproject.toml
automatic_exploit_generation/: binary.py  cli.py  configuration.py  exceptions.py  exploiter_generator.py  mitigations.py  process.py
automatic_exploit_generation/common/: process.py
automatic_exploit_generation/exploiters/: __init__.py  base_exploiter.py
automatic_exploit_generation/exploiters/zeratool/: __init__.py  zeratool.py
automatic_exploit_generation/exploiters/zeratool/protobuf/: exploit.proto  exploit_pb2.py  exploit_pb2_grpc.py
automatic_exploit_generation/weaknesses/: stack_bof.py
docker/: Dockerfile  Dockerfile.zeratool_lib  protobuf  requirements.txt  zeratool_lib_service.py
docker/zeratool_lib/: .gitignore  README.md  pyproject.toml
docker/zeratool_lib/tests/: test_zeratool_binaries.py
docker/zeratool_lib/tests/zeratool_binaries/: Makefile  buffer_overflow.c  format_string.c
docker/zeratool_lib/zeratool_lib/: formatDetector.py  formatExploiter.py  formatLeak.py  overflowDetector.py  overflowExploitSender.py  overflowExploiter.py  overflowRemoteLeaker.py  printf_model.py  protectionDetector.py  puts_model.py  radare_helper.py  remote_libc.py  simgr_helper.py  win_functions.py  zeratool_lib.py
others/binaries/streams_checkers/: Makefile  file.c  stdin.c
others/binaries/zeratool/: Makefile  buffer_overflow.c  format_string.c
others/streams_checkers/: arguments.c
tests/: test_mitigations.py  test_process.py
