[tool.poetry]
name = "zeratool-lib"
version = "0.1.0"
description = "Fork of Zeratool for exploiting executables on the local machine"
authors = ["George-Andrei Iosif <hi@iosifache.me>"]
license = "GNU General Public License v3.0"
readme = "README.md"
packages = [{include = "zeratool_lib"}]

[tool.poetry.dependencies]
python = "^3.10"
angr = "^9.2.52"
claripy = "^9.2.52"
ipython = "^8.13.2"
pwntools = "^4.10.0"
r2pipe = "^1.8.0"
timeout-decorator = "^0.5.0"
tqdm = "^4.65.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
